# ReadyToStart

./: .pre-commit-config.yaml  GameDesign.md  README.md  Roadmap_BirdseyeView.md  Roadmap_Phase_10.md  Roadmap_Phase_2a.md  Roadmap_Phase_2a_Implementation_Guide.md  Roadmap_Phase_5.md  Roadmap_Phase_7.md  TESTING_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.py  test_fixes.py  test_ui_locked_interaction.py
config/: anti_patterns.ini  categories.ini  comments.ini  fake_messages.ini  generation.ini  hidden_conditions.ini  indicators.ini  layout.ini  levels.ini  messages.ini  meta_levels.ini  progress_bars.ini  propagation.ini  settings_groups.ini  templates.ini  ui.ini  victory.ini  vocabulary.ini  wfc_rules.ini
data/: achievements.json  dependency_patterns.json  error_messages.json  fourth_wall_breaks.json  hints.json  interface_layers.json  madlibs_pools.json  menu_categories.json  meta_comments.json
docs/: MANUAL.md  Roadmap_BirdseyeView.md  Roadmap_Phase_1.md  Roadmap_Phase_11.md  Roadmap_Phase_2.md  Roadmap_Phase_3.md  Roadmap_Phase_4.md  Roadmap_Phase_6.md  Roadmap_Phase_7.md  Roadmap_Phase_8.md  Roadmap_Phase_9.md
scripts/: achievement_progress.py  adjust_balance.py  analyze_session.py  build.sh  check_solvability.py  content_stats.py  demo_layer.py  generate_difficulty_report.py  generate_setting_templates.py  generate_test_data.py  headless_play.py  playtest.py  preview_layout.py  scripted_play.py  test_layer.py  test_logic.py  validate_all_content.py  validate_categories.py  view_stats.py  visualize_deps.py  (+2 more)
(+224 files in other folders)
